my_yaml_files/myweb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myweb
  name: myweb

spec:
  replicas: 2
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - image: vladreamer/myweb:3
        imagePullPolicy: IfNotPresent
        name: myweb
        resources:
         limits:
           memory: 120Mi
           cpu: "1"
         requests:
           memory: 100Mi
           cpu: "0.2"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myweb
  name: myweb

spec:
  ports:
  - nodePort: 32223
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myweb
  type: LoadBalancer
